# fields2cover_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: Controls.cfg
cmake/Modules/: FindPythonInterp.cmake
data/: autocollect.xml  carpark_1_esay.xml  carpark_2_mainroad.xml  carpark_3_overlap.xml  carpark_4_turn.xml  darryl_farm.xml  gps_polygon.json  mainroad_test.xml  paddock.json  paddock.xml
include/: Fields2CoverVisualizerNode.h  toolpath_generator.hpp
include/ros/: conversor.h
launch/: demo.rviz  upath_process.launch  view_field.launch
plan/: a2b_path_sample_0_0.5.txt  path_sample_0.txt  path_sample_1.txt
scripts/: buffer.py  global_odom.txt  main.py  main.txt  utils.py
src/: Fields2CoverVisualizerNode.cpp  Fields2Cover_gps.cpp  fields2cover_visualizer_node.cpp  global_odom_recorder.cpp  toolpath_generator.cpp
src/ros/: conversor.cpp
